<resources>
    <string name="app_name">INFS2608 Learning App</string>
    <string name="ChapterThree_text1">
        "Topic Three: Database System Development Lifecycle\n\n\n\n"

"Database System Development Lifecycle\n\n\n"
"Includes:\n\n"
"-  Database planning\n"
"-  System definition\n"
"-  Requirements collection and analysis\n"
"-  Database design\n"
"-  DBMS selection (optional)\n"
"-  Application design\n"
"-  Prototyping (optional)\n"
"-  Implementation\n"
"-  Data conversion and loading\n"
"-  Testing\n\n\n"

    </string>
    <string name="ChapterThree_text2">
        "Database Planning\n\n\n"
"Management activities allowing stages of database system development lifecycle to be realised as efficiently and effectively as possible\n\n"

"To be integrated with overall IS strategy.\n\n\n"

"Database Planning – Mission Statement and Objectives\n\n\n"
"Mission statement involves major aims being defined for database application. "
"People driving database project normally define the mission statement. It clarifies the purpose of the database project and provides a clearer "
"path towards efficient and effective creation of the database system.\n\n"

"Post mission statement, the objectives are defined, where each of which identifies a specific task the database is to support. "
"This may be accompanied by additional information specifying the work to be done, the resources to do it and the money to pay for it. \n\n\n"

"Database Planning\n\n\n"
"To include development of standards governing how data is to be collected, the format specified and the necessary documentation needed.\n\n\n"

"System Definition\n\n\n"
"Describes the scope and boundaries of the database system and the major user views.\n\n\n"

"Requirements Collection and Analysis\n\n\n"
"Process of collecting and analysing information about the part of the organisation to be supported by the database system and using "
"the information to identify user requirements. \n\n"
"Important to decide which approach to use in managing multiple user views. Whether this be a centralised approach, view integration approach or a combination.\n\n\n"


"Local vs Global Data Model\n\n\n"
"Data model representing single user view which is called a local data model. Each model has diagrams and documentation which describes requirements "
"for one or more but not all users of the database. Local data models are merged at a later stage during database design to produce "
"a global data model, representing all user views for the database. \n\n\n"

"Database Design\n\n\n"
"Process of creating a design for a database to support the enterprises mission statement and mission objectives for the system. \n\n"
"Main approaches involve Top-down, bottom-up, inside-out and mixed.\n\n"
"The main purposes of a data model in design is to ensure we understand each users perspective on the data, "
"the nature of the data itself and the use of data across user view. \n\n"
"Three phases:\n\n"
"Conceptual database Design, Logical database Design, Physical database design\n\n\n"
    </string>
    <string name="ChapterThree_text3">
"Conceptual Database Design\n\n\n"
"Process of constructing a model of the data used in an enterprise, independent of physical considerations. "
"Data model is built using information in user requirements specification. Conceptual data model is a source of information for logical design phase.\n\n\n"

"Logical Database Design\n\n\n"
"Process of constructing model of data used in an enterprise based on a specific data model, but independent of a DBMS and other physical considerations.\n\n"
"Conceptual Data model is refined and mapped on to a logical data model.\n\n"

"Physical Database Design\n\n\n"
"Process of producing a description of the database implementation on secondary storage. Describes base relations, "
"file organisations, and indexes used to achieve efficient access to data. Also describes any associated integrity constraints and security measures.\n\n\n"

"DBMS Selection\n\n\n"
"Selection of an appropriate DBMS to support the database system. It is to be undertaken at any time prior "
"to logical design provided enough information is available regarding system requirements. The Main steps to selecting a DBMS include "
"defining Terms of Reference of study; shortlisting two or three products; evaluating products; recommending selection and producing report.\n\n\n"

"Application Design\n\n\n"
"Design of user interface and application programs that use and process the database. "
"Database design and application design are parallel activities. It includes two important activities – transaction design and user interface design.\n\n\n"

"Prototyping\n\n\n"
"Prototyping helps to identify features of a system that work well or are inadequate, to suggest improvements "
"or new features, to clarify the users requirements and to evaluate the feasibility of a particular system design.\n\n\n"

"Implementation\n\n\n"
"The physical realisation of the database and application design. DDL is used to create database schemas "
"and empty database files and any specified user views. 3rd generation or 4th generation programming languages are used to create the application programs. \n\n\n"

"Data Conversion and Loading\n\n\n"
"Transferring any existing data into the new database and converting any existing ap0plications to run on the new database.\n\n\n"

"Testing\n\n\n"
"Running the database system with intent of finding errors. Use of carefully planned test strategies and realistic data. \n\n\n"

"Operational Maintenance\n\n\n"
"The process of monitoring and maintaining the database system post-installation. Overall, you monitor the performance "
of the system, acting accordingly whether performance falls or upgrades are needed.\n\n\n"
    </string>
    <string name="ChapterFive_text1">
        "Topic 5: Data Security\n\n\n\n"


"Data Security\n\n"
"Data is a valuable resource that must be strictly controlled and managed, as with any corporate resource.\n\n"


"Part or all of the corporate data may have strategic importance and therefore needs to be kept secure and confidential.\n\n"

"Mechanisms that protect the database against intentional or accidental threats.\n\n"

"Security considerations do not only apply to the data held in a database. Breaches of security may affect other parts of the system, which "
"may in turn affect the database.\n\n"

"Involves measures to avoid: Theft and fraud, Loss of confidentiality, Loss of privacy, Loss of integrity, Loss of availability\n\n\n"

"Overview of Threats\n\n"
    </string>
    <string name="ChapterFive_text2">
        "Countermeasures to Threats\n\n"
"Countermeasures are concerned with physical controls to administrative "
"procedures and includes: Access control: authentication / authorization, Views, Backup and recovery, Integrity, Encryption, RAID technology\n\n\n"

"Authentication / Authorization\n\n"
"Authentication: process of determining whether a user is, who he or she claims to be.\n"

"Authorization: rules to determine what the user can access and do (access control).\n"

"Based on the granting and revoking of privileges. A privilege allows a user to create or access (that is "
"read, write or modify) some database object (such as a relation, view and index) or to run certain DBMS utilities. "
"Privileges are granted to users to accomplish the tasks required for their jobs.\n\n\n"

"Discretionary Access Control (DAC)\n\n"
"Most DBMS provide an approach called Discretionary Access Control (DAC). SQL standard supports DAC through the GRANT and REVOKE commands.\n"

"The GRANT command gives privileges to users, the REVOKE command takes away privileges.\n\n"

"DAC while effective has certain weaknesses. In particular an unauthorized user can "
"trick an authorized user into disclosing sensitive data. Problem: social engineering / users control DAC.\n\n"

"An additional approach is required called Mandatory Access Control (MAC). The SQL standard does not include support for MAC.\n\n"

"DAC based on system-wide policies that cannot be changed by individual users. q Each database object is assigned a security class. "
"Each user is assigned a clearance for a security class. \n"

"Rules are imposed on reading and writing of database objects by users.  DAC determines whether a user can read or write an object "
"based on rules that involve the security level of the object and the clearance of the user. These rules ensure that sensitive data can never "
"be ‘passed on’ to another user without the necessary clearance.\n\n\n"


"Views\n\n"
"View: is the dynamic result of one or more relational operations operating on the "
"base relations to produce another relation. A view is a virtual relation that does not actually exist "
"in the database, but is produced upon request by a particular user, at the time of request. \n\n\n"

"Backup and Recovery\n\n"
"Backup: Process of periodically taking a copy of the database and log file (and "
"possibly programs) to offline storage media.\n\n"

"Journaling: Process of keeping and maintaining a log file (or journal) of all changes made to database to enable effective recovery in event of failure.\n\n\n"

"Integrity\n\n"
"Integrity: Prevents data from becoming invalid, and hence giving misleading or incorrect results (integrity constraints).\n\n\n"


"Encryption\n\n"
"Encryption: The encoding of the data by a special algorithm that renders the data unreadable by any program without the decryption "
"key (public-key-private-key encryption).\n\n"

"RAID Technology\n"
"RAID = Redundant Array of Independent Disks\n"
"Hardware that the DBMS is running on must be fault-tolerant, meaning that the DBMS should continue to operate even if one of the hardware components fails.\n\n"

"Suggests having redundant components that can be seamlessly integrated into the working system whenever there is one or more component failures.\n"

"The main hardware components that should be fault-tolerant include disk drives, disk controllers, CPU, power supplies and cooling fans.\n"

"Disk drives are the most vulnerable components with the shortest times between failure of any of the hardware components.\n"

"One solution is to provide a large disk array comprising an arrangement of several independent disks that are organized to improve "
"reliability and at the same time increase performance.\n"

"Performance is increased through data striping: the data is segmented into equal- size partitions (the striping unit), which are "
"transparently distributed across multiple disks.\n"

"Reliability is improved through storing redundant information across the disks using a parity scheme or an error-correcting scheme.\n\n"

    </string>
    <string name="ChapterFive_text3">
        "DBMSs and Web Security\n\n"
"Internet communication relies on TCP/IP as the underlying protocol. However, TCP/IP and HTTP were not designed with security in mind.\n"

"Without special software, all Internet traffic travels ‘in the clear’ and anyone who monitors traffic can read it.\n\n"

"Must ensure while transmitting information over the Internet that: inaccessible to anyone but sender and receiver ( "
"privacy); not changed during transmission (integrity); receiver can be sure it came from sender (authenticity); sender can be "
"sure receiver is genuine (non-fabrication); sender cannot deny he or she sent it (non-repudiation).\n"

"Measures include: Proxy servers, Firewalls, Message digest algorithms and digital signatures, Digital certificates, Kerberos "
"(network authentication protocol), Secure sockets layer (SSL) and Secure HTTP (HTTPS), Secure Electronic Transactions (SET) and "
"Secure Transaction Technology (SST), Java security, ActiveX security\n\n\n"
    </string>
</resources>