<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChapterThree"
    tools:showIn="@layout/activity_chapter_three">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/Chapter3TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/ChapterThree_text1" />

        <ImageView
            android:id="@+id/Chapter3IM1"
            android:layout_width="match_parent"
            android:layout_height="434dp"
            app:srcCompat="@drawable/chapterthreeimageone" />

        <TextView
            android:id="@+id/Chapter3TV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/ChapterThree_text2" />

        <ImageView
            android:id="@+id/Chapter3IM2"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            app:srcCompat="@drawable/chapterthreeimagetwo" />

        <TextView
            android:id="@+id/Chapter3TV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/ChapterThree_text3" />

        <Button
            android:id="@+id/youtubeChapter3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Watch Video on Database System Development Lifecycle"
            tools:text="Watch Video on Database System Development Lifecycle" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>