<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="397dp"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChapterFive"
    tools:showIn="@layout/activity_chapter_five">

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="vertical"
       >

        <TextView
            android:id="@+id/Chapter5TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/ChapterFive_text1" />

        <ImageView
            android:id="@+id/Chapter5IM1"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:contentDescription="Overview of Data Security"
            app:srcCompat="@drawable/chapterfiveimageone" />

        <TextView
            android:id="@+id/Chapter5TV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/ChapterFive_text2" />

        <ImageView
            android:id="@+id/Chapter5IM2"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            app:srcCompat="@drawable/chapterfiveimagetwo" />

        <TextView
            android:id="@+id/Chapter5TV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:text="@string/ChapterFive_text3" />

        <Button
            android:id="@+id/youtubeChapter5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Watch Video on Data Security"
            tools:text="Watch Video on Data Security" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
